--- a/requirements.txt
+++ b/requirements.txt
@@ -1,21 +1,22 @@
 alembic==1.6.5
-anyio==3.6.1
+aiofiles==0.5.0
+aniso8601==7.0.0
 bcrypt==3.2.0
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer==2.0.4
 click==7.1.2
-cryptography==38.0.1
+colorama==0.4.4
+cryptography==33.4.8
 dnspython==2.1.0
 ecdsa==0.17.0
 email-validator==1.1.3
 fastapi==0.68.0
+graphene==2.1.9
 greenlet==1.1.1
 h11==0.12.0
 httptools==0.3.0
 idna==3.2
-importlib-metadata==5.0.0
-importlib-resources==5.9.0
 itsdangerous==1.1.0
 Jinja2==2.11.3
 jose==1.0.0
@@ -42,7 +43,5 @@ typing-extensions==4.3.0
 ujson==4.0.2
 urllib3==1.26.6
 uvicorn==0.13.4
-uvloop==0.17.0
-watchfiles==0.17.0
 websockets==8.1
 zipp==3.8.1
