--- a/requirements.txt
+++ b/requirements.txt
@@ -4,7 +4,7 @@ aniso8601==7.0.0
 bcrypt==3.1.7
 certifi==2021.5.30
 cffi==1.14.6
-charset-normalizer==2.1.1
+charset-normalizer
 click==8.0.4
 colorama==0.4.5
 cryptography==3.4.8
