--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,7 @@ bcrypt==3.1.7
 certifi==2021.5.30
 cffi==1.14.6
 charset-normalizer
-click==8.0.4
+click
 colorama==0.4.5
 cryptography==3.4.8
 dnspython==2.1.0
