--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -8,7 +8,14 @@ jobs:
     steps:
       - name: pulling git repo
         uses: actions/checkout@v2
-      - name: say hi to Brian
-        run:  echo "hello Brian"
-        
+      - name: install python version 3.9
+        uses: actions/setup-python@v2
+        with:
+          python-version: "3.9"
+      - name: update pip
+        run:  python3 -m pip install --upgrade pip
+      - name: install all dependencies
+        run:  pip install -r requirements.txt
+     
+
 
