--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -4,6 +4,17 @@ on: [push, pull_request]
 
 jobs:
   job1:
+    env:
+      DATABASE_HOSTNAME: localhost
+      DATABASE_PORT: 5432
+      DATABASE_PASSWORD: 7501Fitness!
+      DATABASE_NAME: fastapi
+      DATABASE_USERNAME: postgres
+      SECRET_KEY: 09034582923492634ABCD239824ABCE9138492847ADBCE29898749237948394857395873
+      ALGORITHM: HS256
+      ACCESS_TOKEN_EXPIRE_MINUTES: 60
+
+
     runs-on: ubuntu-latest
     steps:
       - name: pulling git repo
@@ -20,7 +31,7 @@ jobs:
         run:  |
           pip install pytest
           pytest
-          
+
      
 
 
