--- a/.github/workflows/build-deploy.yaml
+++ b/.github/workflows/build-deploy.yaml
@@ -87,6 +87,8 @@ jobs:
     environment:
         name: production 
     steps:
+      - name: pulling git repo
+        uses: actions/checkout@v2
       - name: DigitalOcean App Platform deployment
         uses: digitalocean/app_action@main
         with:
